# uniapp-use-api

./: Cargo.toml
src/: handler.rs  main.rs  prompt_util.rs  responses.rs  utils.rs
src/handler/: demo_handler.rs  openai_handler.rs
src/openai_prompts/: english.txt
